integration/src/test/resources/templates/invalid-target/wasm-nodejs/build.gradle
kotlin {
    wasmJs {
        nodejs()
    }
}

benchmark {
    targets {
        register("wasmJs")
    }
}
